# pytorch

opencv-dl-pytorch-week11/opencv-dl-pytorch-week11/: Soft-Dice_Loss.ipynb  readme.md
opencv-dl-pytorch-week13/: readme.md
opencv-dl-pytorch-week15/opencv-dl-pytorch-week15/LibTorch/libtorch-train-cnn/: CMakeLists.txt  Caltech_training.cpp  run_training.sh
opencv-dl-pytorch-week3/opencv-dl-pytorch-week3/: readme.md
opencv-dl-pytorch-week4/: readme.md
opencv-dl-pytorch-week6/opencv-dl-pytorch-week6/: readme.md
opencv-dl-pytorch-week6/opencv-dl-pytorch-week6/PyTorch_Lightning/: Inference_on_Production.ipynb  Introduction_to_PyTorch_Lightning.ipynb  PyTorch_to_Lightning.ipynb  PyTorch_to_Lightning.py  Transfer_Learning_with_Lightning.ipynb  Transfer_Learning_with_Lightning.py
opencv-dl-pytorch-week8/: readme.md
opencv-dl-pytorch-week9/opencv-dl-pytorch-week9/: readme.md
